[package]
name = "rust_dkvs"
version = "0.1.0"
authors = ["Ryo Kanbayashi <ryo.contact@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.6.1"
bytes = "1.1.0"
prost = "0.9.0"
prost-derive = "0.9.0"
rocket = "0.4.10"
rocket_contrib = { version = "0.4.5", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.68"
hyper = "0.14.13"
reqwest = { version = "0.11.5", features = ["json"] }
lazy_static = "1.4.0"
# parking_lot = "0.11"
clippy = { version = "*", optional = true }
rand = "0.8.3"
chrono = "0.4"
#pprof = { version = "0.5.1", features = ["protobuf"] }

[profile.release]
panic = 'abort'

[build-dependencies]
tonic-build  = "0.6.0"

